--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,12 +18,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Rust
-      uses: actions-rs/toolchain@v1
-      with:
-        toolchain: stable
-        target: x86_64-pc-windows-msvc
-        profile: minimal
-        override: true
+      uses: dtolnay/rust-toolchain@stable
 
     - name: Build
       run: cargo build --release --verbose
@@ -35,8 +30,6 @@ jobs:
       run: |
         mkdir -p artifacts
         cp target/release/HW-Crypto-Tests.exe artifacts/
-      env:
-        HW-Crypto-Tests: HW-Crypto-Tests_here
 
     - name: Upload build artifact
       uses: actions/upload-artifact@v4
