--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,8 +10,6 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
-permissions:
-  contents: write  # Ensure the GITHUB_TOKEN has write permission
 
 jobs:
   build:
@@ -24,10 +22,7 @@ jobs:
       uses: dtolnay/rust-toolchain@stable
 
     - name: Build
-      run: cargo build --release --verbose
-
-    - name: Run tests
-      run: cargo test --verbose
+      run: cargo build --release
 
     - name: Archive build
       run: |
@@ -44,8 +39,11 @@ jobs:
   release:
     needs: build
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-
+    #if: startsWith(github.ref, 'refs/tags/')
+    
+    permissions:
+      contents: write
+      
     steps:
     - name: Download build artifact
       uses: actions/download-artifact@v4
