--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -30,13 +30,12 @@ jobs:
       run: |
         mkdir -p artifacts
         cp target/release/HW-Crypto-Tests.exe artifacts/
-        tar -czvf artifacts/HW-Crypto-Tests.zip -C artifacts HW-Crypto-Tests.exe
 
     - name: Upload build artifact
       uses: actions/upload-artifact@v4
       with:
         name: build-artifact
-        path: artifacts/HW-Crypto-Tests.zip
+        path: artifacts/HW-Crypto-Tests.exe
 
   release:
     needs: build
@@ -48,10 +47,7 @@ jobs:
       uses: actions/download-artifact@v4
       with:
         name: build-artifact
-        path: .
-
-    - name: Unzip build artifact
-      run: unzip build-artifact/HW-Crypto-Tests.zip -d build-artifact/
+        path: ./artifacts
 
     - name: Create GitHub Release
       id: create_release
@@ -68,6 +64,6 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: build-artifact/HW-Crypto-Tests.exe
+        asset_path: ./artifacts/HW-Crypto-Tests.exe
         asset_name: HW-Crypto-Tests.exe
         asset_content_type: application/octet-stream
