--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,8 +10,6 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
-permissions:
-  contents: write  # Ensure the GITHUB_TOKEN has write permission
 
 jobs:
   build:
@@ -42,6 +40,9 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
 
+    permissions:
+      contents: write 
+      
     steps:
     - name: Download build artifact
       uses: actions/download-artifact@v4
