--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -10,6 +10,8 @@ on:
 env:
   CARGO_TERM_COLOR: always
 
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -41,8 +43,8 @@ jobs:
     if: startsWith(github.ref, 'refs/tags/')
 
     permissions:
-      contents: write 
-      
+      contents: write
+
     steps:
     - name: Download build artifact
       uses: actions/download-artifact@v4
@@ -53,6 +55,8 @@ jobs:
     - name: Create GitHub Release
       id: create_release
       uses: ncipollo/release-action@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag: ${{ github.ref }}
         token: ${{ secrets.GITHUB_TOKEN }}
@@ -63,6 +67,8 @@ jobs:
 
     - name: Upload Release Asset
       uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./artifacts/HW-Crypto-Tests.exe
