--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-des = "0.8.1"
-rand = "0.8.5"
+des = "0.9.0-pre.0"
+rand = "0.9.0-alpha.1"
 serialport = "4.3.0"
 clap = { version = "4.5.4", features = ["derive"] }
 hex = "0.4.3"
 regex = "1.10.4"
-aes = "0.8.4"
+aes = "0.9.0-pre"
+simple_logger = "5.0.0"
+log = "0.4.21"
