--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,6 @@ regex = "1.10.4"
 aes = "0.9.0-pre"
 simple_logger = "5.0.0"
 log = "0.4.21"
-ini = "1.3.0"
+serde = { version = "1.0.204", features = ["derive"] }
+toml = "0.8.14"
+serde_bytes = "0.11.15"
