Config file support

--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,4 @@
 # Default Values
-aes_key = "CAFEBABEDEADBEEF0001020304050607"
-des_key = "CAFEBABEDEADBEEF"
-aes_plaintext = "00000000000000000000000000000000"
-des_plaintext = "0000000000000000"
+key = "CAFEBABEDEADBEEF"
+plaintext = "0000000000000000"
+algorithm = "HWDES"
